# os

./: .gitignore  CMakeLists.txt  README.md  child.c  main.c  main.cpp
.devcontainer/: devcontainer.json
include/: deleteVowels.h
src/: deleteVowels.c
